<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:layout_gravity="center"

    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/txtHeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDialogHeader"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/notice"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/iv_notice_icon"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/loading"/>
    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="21dp"
        android:text="@string/please_wait"/>

    <Button
        android:id="@+id/btn_dialog_ok_retry"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="15dp"
        android:text="@string/hair" />

    <Button
        android:id="@+id/btn_dialog_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button_white"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary" />

</LinearLayout>