<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="10dp">
    <TextView
        android:id="@+id/txtHeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDialogHeader"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/setting"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20sp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/white_balance"
            android:textSize="20sp"/>
       <TableLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TableRow
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <Button
                   android:id="@+id/btnWBAuto"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:background="@mipmap/ic_whitebalance_auto"
                   android:layout_weight="1"/>
               <Button
                   android:id="@+id/btnWBIncandescent"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:background="@mipmap/ic_whitebalance_incandescent"
                   android:layout_weight="1"/>
               <Button
                   android:id="@+id/btnWBFluorescent"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:background="@mipmap/ic_whitebalance_fluorescent"
                   android:layout_weight="1"/>
               <Button
                   android:id="@+id/btnWBDaylight"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:background="@mipmap/ic_whitebalance_daylight"
                   android:layout_weight="1"/>
               <Button
                   android:id="@+id/btnWBCloudy"
                   android:layout_height="match_parent"
                   android:layout_width="match_parent"
                   android:background="@mipmap/ic_whitebalance_cloudy"
                   android:layout_weight="1"/>
           </TableRow>
       </TableLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20sp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/focus"
            android:textSize="20sp"/>
        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/focusSlider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:progressTint="@color/colorBlack" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shutter_speed_tag"
            android:textSize="20sp"/>
        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/shutterSlider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:progressTint="@color/colorBlack" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exposure"
            android:textSize="20sp"/>
        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/exposureSlider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:progressTint="@color/colorBlack" />
    </LinearLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/iso100"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1sp"
                android:text="ISO 100"/>

            <Button
                android:id="@+id/iso200"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1sp"
                android:text="ISO 200"/>

            <Button
                android:id="@+id/iso400"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1sp"
                android:text="ISO 400"/>

            <Button
                android:id="@+id/iso800"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1sp"
                android:text="ISO 800"/>

            <Button
                android:id="@+id/iso1600"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1sp"
                android:text="ISO 1600"/>

            <Button
                android:id="@+id/iso3200"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1sp"
                android:text="ISO 3200" />
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:layout_gravity="center"
            android:layout_margin="10sp"/>
    </LinearLayout>

</LinearLayout>