<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent"
    tools:context=".activity.AnalyzeActivity">

    <ScrollView
        android:id="@+id/scrollViewr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header">

            <include
                android:id="@+id/header"
                layout="@layout/layout_header" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_retake"
                    style="@style/button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/retake"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_analyze" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/how_to_calibrate"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/calibrate_instruction"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cameraLayout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/result_image_height"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:background="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.otaliastudios.cameraview.CameraView
                            android:id="@+id/camera"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:keepScreenOn="true"
                            app:cameraAutoFocusMarker="@string/camera_focus_marker"
                            app:cameraEngine="camera2"
                            app:cameraExperimental="true"
                            app:cameraFacing="back"
                            app:cameraGestureTap="autoFocus"
                            app:cameraMode="picture"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:id="@+id/img_original"
                                android:layout_width="@dimen/result_image_height"
                                android:layout_height="@dimen/result_image_height"
                                android:layout_gravity="center"
                                android:adjustViewBounds="true"
                                android:scaleType="fitXY" />
                        </com.otaliastudios.cameraview.CameraView>

                        <ImageView
                            android:id="@+id/iv_camera_guide"
                            android:layout_width="@dimen/result_image_height"
                            android:layout_height="@dimen/result_image_height"
                            android:layout_gravity="center"
                            android:adjustViewBounds="true"
                            android:scaleType="fitXY"
                            android:src="@drawable/camera_guide" />

                        <com.chowis.cma.dermopicotest.custom_view.FocusView
                            android:id="@+id/focus_view1"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/result_image_height"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </FrameLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>


                <Button
                    android:id="@+id/btn_analyze"
                    style="@style/button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/analyze"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cameraLayout" />

                <ImageView
                    android:id="@+id/iv_image_capture"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cameraLayout"
                    app:srcCompat="@drawable/take_picture" />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="170dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/rounded_button_white"
                    android:text="@string/cancel"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cameraLayout" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>